--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-        <input type="number" id="cash" placeholder="Enter cash amount">
+    <div class="container">
+        <input type="number" id="cash" placeholder="Enter cash provided">
         <button id="purchase-btn">Purchase</button>
         <div id="change-due"></div>
     </div>
