--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <div id="change-due"></div>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
